--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,3 +32,18 @@ services:
       interval: 10s
       retries: 5
       start_period: 10s
+
+  test:
+    build:
+      context: .
+      target: builder
+    command: go test ./... 
+    environment:
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+    depends_on:
+      db:
+        condition: service_healthy
