--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,8 @@ services:
       POSTGRES_INITDB_ARGS: "-A md5" 
     ports:
       - "5432:5432"
+    volumes:
+      - db_data:/var/lib/postgresql/data
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
       interval: 10s
@@ -49,3 +51,6 @@ services:
         condition: service_healthy
     profiles:
       - test
+
+volumes:
+  db_data:
